--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "take home assessment handling the management of task management API with node.js and express.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -12,7 +12,8 @@
   },
   "keywords": [
     "node.js",
-    "express.js"
+    "express.js",
+    "jest"
   ],
   "author": "Louai Aloui",
   "license": "ISC",
@@ -25,6 +26,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   }
 }
