--- a/.github/workflows/task-management-actions.yml
+++ b/.github/workflows/task-management-actions.yml
@@ -1,13 +1,18 @@
 name: Task Management CI
 
 on:
-  pull_request:
-    branches:
-      - master
+    push:
+      branches: [ master ]
+    pull_request:
+      branches: [ master ]
+
+    workflow_dispatch:
 
 jobs:
-  build:
+  
+  test:
     runs-on: [ubuntu-latest, windows-latest, macos-latest]
+    environment: Testing
 
     steps:
       - uses: actions/checkout@v2
@@ -15,6 +20,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18.x'  # Adjust the Node.js version as needed
-      - run: npm ci
+      - run: npm install
       - run: npm run build --if-present
       - run: npm test
