--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "take home assessment handling the management of task management API with node.js and express.js",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "jest"
   },
   "repository": {
